--- a/app/src/main/res/layout/screen_auth.xml
+++ b/app/src/main/res/layout/screen_auth.xml
@@ -1,18 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.crackncrunch.amplain.ui.screens.auth.AuthView
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <ImageView
         android:id="@+id/logo_img"
-        android:layout_width="@dimen/login_logo_width_70"
+        android:layout_width="@dimen/login_logo_width_100"
         android:layout_height="@dimen/login_logo_height_100"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="@dimen/spacing_bigger_plus_48"
-        android:src="@drawable/firebase_icon"/>
+        android:src="@drawable/avd_vector_anim"/>
 
     <TextView
         android:id="@+id/app_name_txt"
@@ -32,60 +33,72 @@
         android:layout_above="@+id/social_wrap"
         android:orientation="vertical">
 
-        <android.support.v7.widget.CardView
-            android:id="@+id/auth_card"
-            style="@style/CustomCard.LoginCard"
+        <FrameLayout
+            android:id="@+id/panel_wrapper"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:visibility="gone"
-            tools:visibility="visible">
+            android:layout_height="@dimen/auth_frame_height"
+            tools:background="@android:color/holo_blue_light">
 
-            <LinearLayout
+            <android.support.v7.widget.CardView
+                android:id="@+id/auth_card"
+                style="@style/CustomCard.LoginCard"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical">
+                android:layout_gravity="bottom"
+                android:layout_marginBottom="@dimen/spacing_tiny_6"
+                android:layout_marginTop="@dimen/spacing_tiny_6"
+                app:cardElevation="@dimen/spacing_zero"
+                tools:layout_height="@dimen/size_normal_44"
+                tools:visibility="visible">
 
-                <android.support.design.widget.TextInputLayout
-                    android:id="@+id/login_email_wrap"
+                <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:visibility="invisible">
 
-                    <EditText
-                        android:id="@+id/login_email_et"
+                    <android.support.design.widget.TextInputLayout
+                        android:id="@+id/login_email_wrap"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:hint="@string/enter_email"
-                        android:inputType="textEmailAddress"
-                        android:textColor="@android:color/black"
-                        android:textColorHint="@android:color/darker_gray"
-                        android:textSize="@dimen/font_small_14"/>
-                </android.support.design.widget.TextInputLayout>
+                        android:layout_height="wrap_content">
 
-                <android.support.design.widget.TextInputLayout
-                    android:id="@+id/login_password_wrap"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                        <EditText
+                            android:id="@+id/login_email_et"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:hint="@string/enter_email"
+                            android:inputType="textEmailAddress"
+                            android:textColor="@android:color/black"
+                            android:textColorHint="@android:color/darker_gray"
+                            android:textSize="@dimen/font_small_14"/>
+                    </android.support.design.widget.TextInputLayout>
 
-                    <EditText
-                        android:id="@+id/login_password_et"
+                    <android.support.design.widget.TextInputLayout
+                        android:id="@+id/login_password_wrap"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:hint="@string/enter_password"
-                        android:inputType="textPassword"
-                        android:textColor="@android:color/black"
-                        android:textColorHint="@android:color/darker_gray"
-                        android:textSize="@dimen/font_small_14"/>
-                </android.support.design.widget.TextInputLayout>
+                        android:layout_height="wrap_content">
 
-            </LinearLayout>
+                        <EditText
+                            android:id="@+id/login_password_et"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:hint="@string/enter_password"
+                            android:inputType="textPassword"
+                            android:textColor="@android:color/black"
+                            android:textColorHint="@android:color/darker_gray"
+                            android:textSize="@dimen/font_small_14"/>
+                    </android.support.design.widget.TextInputLayout>
+                </LinearLayout>
+            </android.support.v7.widget.CardView>
 
-        </android.support.v7.widget.CardView>
+            <Button
+                android:id="@+id/show_catalog_btn"
+                style="@style/CustomButton"
+                android:layout_gravity="bottom"
+                android:text="@string/view_catalog"
+                android:theme="@style/ShowBtn"/>
 
-        <Button
-            android:id="@+id/show_catalog_btn"
-            style="@style/CustomButton"
-            android:text="@string/view_catalog"
-            android:theme="@style/ShowBtn"/>
+        </FrameLayout>
 
         <Button
             android:id="@+id/login_btn"
