--- a/app/src/main/res/layout/screen_catalog.xml
+++ b/app/src/main/res/layout/screen_catalog.xml
@@ -4,25 +4,33 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <android.support.v4.view.ViewPager
-        android:id="@+id/product_pager"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="match_parent">
 
-    <LinearLayout
-        android:id="@+id/btn_wrap"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom"
-        android:gravity="center"
-        android:orientation="vertical">
+        <android.support.v4.view.ViewPager
+            android:id="@+id/product_pager"
+            android:layout_alignParentTop="true"
+            android:layout_above="@+id/btn_wrap"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
 
-        <Button
-            android:id="@+id/add_to_card_btn"
-            style="@style/CustomButton"
-            android:theme="@style/StartBtn"
-            android:layout_marginBottom="@dimen/spacing_normal_16"
-            android:layout_marginTop="@dimen/spacing_small_8"
-            android:text="@string/add_to_cart"/>
-    </LinearLayout>
+        <LinearLayout
+            android:id="@+id/btn_wrap"
+            android:layout_marginTop="@dimen/margin_above_add_to_cart_btn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:gravity="center"
+            android:orientation="vertical">
+
+            <Button
+                android:id="@+id/add_to_card_btn"
+                style="@style/CustomButton"
+                android:layout_marginBottom="@dimen/spacing_normal_16"
+                android:layout_marginTop="@dimen/spacing_small_8"
+                android:text="@string/add_to_cart"
+                android:theme="@style/StartBtn"/>
+        </LinearLayout>
+    </RelativeLayout>
 </com.crackncrunch.amplain.ui.screens.catalog.CatalogView>
