--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -23,6 +23,7 @@
     <dimen name="size_small_16">16dp</dimen>
     <dimen name="size_small_24">24dp</dimen>
     <dimen name="size_normal_40">40dp</dimen>
+    <dimen name="size_normal_44">44dp</dimen>
     <dimen name="size_medium_48">48dp</dimen>
     <dimen name="size_medium_56">56dp</dimen>
     <dimen name="size_medium_64">64dp</dimen>
@@ -38,6 +39,7 @@
     <!-- The text box offset is set to Leading (Type > Area Type Options).-->
     <dimen name="spacing_zero">0dp</dimen>
     <dimen name="spacing_tiny_4">4dp</dimen>
+    <dimen name="spacing_tiny_6">6dp</dimen>
     <dimen name="spacing_small_8">8dp</dimen>
     <dimen name="spacing_small_12">12dp</dimen>
     <dimen name="spacing_normal_16">16dp</dimen>
@@ -65,7 +67,7 @@
     <!-- Lines -->
     <dimen name="line_size_1">1dp</dimen>
     <dimen name="line_size_2">2dp</dimen>
-    <dimen name="login_logo_width_70">70dp</dimen>
+    <dimen name="login_logo_width_100">100dp</dimen>
     <dimen name="login_logo_height_100">100dp</dimen>
 
     <!-- Dimensions -->
@@ -84,4 +86,7 @@
     <dimen name="product_info_card_height">145dp</dimen>
     <dimen name="fab_right_space">24dp</dimen>
     <dimen name="fab_bottom_space">16dp</dimen>
+    <dimen name="auth_frame_height">140dp</dimen>
+    <dimen name="card_elevation_normal">4dp</dimen>
+    <dimen name="margin_above_add_to_cart_btn">37dp</dimen>
 </resources>
