--- a/app/src/main/res/layout/activity_root.xml
+++ b/app/src/main/res/layout/activity_root.xml
@@ -36,7 +36,7 @@
             android:id="@+id/root_frame"
             android:layout_marginTop="?attr/actionBarSize"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="match_parent">
 
         </FrameLayout>
     </android.support.design.widget.CoordinatorLayout>
