--- a/app/src/main/res/layout/screen_auth.xml
+++ b/app/src/main/res/layout/screen_auth.xml
@@ -59,6 +59,7 @@
 
                     <android.support.design.widget.TextInputLayout
                         android:id="@+id/login_email_wrap"
+                        android:hint="@string/enter_email"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content">
 
@@ -66,10 +67,13 @@
                             android:id="@+id/login_email_et"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:hint="@string/enter_email"
-                            android:inputType="textEmailAddress"
+                            android:imeOptions="actionNext"
+                            android:nextFocusDown="@+id/login_password_et"
+                            android:inputType="text"
+                            android:maxLines="1"
                             android:textColor="@android:color/black"
                             android:textColorHint="@android:color/darker_gray"
+                            android:ems="10"
                             android:textSize="@dimen/font_small_14"/>
                     </android.support.design.widget.TextInputLayout>
 
@@ -82,6 +86,7 @@
                             android:id="@+id/login_password_et"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:imeOptions="actionDone"
                             android:hint="@string/enter_password"
                             android:inputType="textPassword"
                             android:textColor="@android:color/black"
